Final push for prototype. Future inclusions include integrating Ollama or other LLM, fix the page reloading...

--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -3,7 +3,15 @@
   "name": "YT Smart Chapterizer",
   "version": "1.0",
   "description": "Generate topic-based YouTube chapters",
-  "permissions": ["activeTab"],
+
+  "permissions": [
+    "activeTab"
+  ],
+
+  "host_permissions": [
+    "https://www.youtube.com/*"
+  ],
+
   "action": {
     "default_popup": "popup.html"
   }
